# docs_organizer

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: build.js  package.json  tsconfig.json
frontend/src/: app.tsx  reducer.ts  types.ts
frontend/src/scss/: _globals.scss  app.scss  colors.scss  constants.scss  fontsizes.scss
frontend/src/upload/: actions.ts  container.ts  reducer.ts  style.scss  view.tsx
src/: document.rs  main.rs
