[package]
name = "docs_organizer"
version = "0.1.0"
authors = ["martinbeckmann"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elastic = "0.21.0-pre.5"
elastic_derive = "0.21.0-pre.5"
serde_json = "^1"
serde = "^1"
leptess = "^0.8"
hyper = "^0.13"
futures = "^0.3"
futures-util = "^0.3"
tokio = {version = "^0.2", features = ["full"]}
image = "^0.22"
chrono = "^0.4"
opencv = {version = "0.28", default-features = false, features = ["opencv-41", "contrib"]}